# symfose

./: .gitignore  .rumdl.toml  Cargo.toml  README.md  about.toml  biome.json  lychee.toml  rustfmt.toml  stylua.toml  taplo.toml  typos.toml
config/: symfose.toml  symposium.toml
docs/reference/: RELEASE.md
docs/reference/ai/: POST-CHANGES.md  README.md  RUST.md
docs/reference/ai/tools/: ADDING.md
docs/reference/branding/: README.md
docs/reference/libs/: README.md
docs/reference/migration/: roadmap.md  secondary-roadmap.md  structure.md
docs/reference/tools/: cliff.md  hyperfine.md
res/songs/: ode_to_joy.toml  twinkle.toml
res/songs/schema/: song.schema.json
res/soundfonts/: README.md
src/: audio.rs  config.rs  input.rs  main.rs  songs.rs
