[package]
edition = "2024"
name    = "chunkr"
version = "0.1.0"

[dependencies]
anyhow = "1.0.100"
blake3 = "1.3.2"
chrono = "0.4.43"
clap = { features = [
  "derive",
], version = "4.5.55" }
quick-xml = "0.39.0"
rayon = "1.7.0"
reqwest = { features = [
  "json",
  "rustls",
], version = "0.13.1" }
serde = { features = [
  "derive",
], version = "1.0.228" }
serde_json = "1.0.149"
tokio = { features = [
  "macros",
  "rt-multi-thread",
], version = "1.49.0" }
toml = "0.9.11"
tracing = "0.1.44"
tracing-subscriber = { features = [
  "env-filter",
], version = "0.3.22" }
unicode-normalization = "0.1.25"
uuid = { features = [
  "v4",
], version = "1.20.0" }
walkdir = "2.5.0"
xxhash-rust = { features = [
  "xxh3",
], version = "0.8.15" }
