[package]
edition = "2024"
name    = "symposium"
version = "0.1.0"

[dependencies]
anyhow = "1.0.101"
iced = "0.14.0"
rodio = "0.21.1"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
